# pure-uri

./: default.nix  pure-uri.cabal
src/Pure/Data/: URI.hs
