name:                pure-uri
version:             0.8.0.0
homepage:            purehs.org/doc/pure-uri
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-uri.git

library
  build-depends:
    base,
    pure-txt

  hs-source-dirs: src

  exposed-modules:
    Pure.Data.URI

  default-language: Haskell2010
